--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -5,9 +5,26 @@
 about: []
 access: []
 assetsSummary:
-  numberOfBytes: 0
-  numberOfFiles: 0
+  approach:
+  - name: electrophysiological approach
+    schemaKey: ApproachType
+  dataStandard:
+  - identifier: RRID:SCR_015242
+    name: Neurodata Without Borders (NWB)
+    schemaKey: StandardsType
+  measurementTechnique:
+  - name: spike sorting technique
+    schemaKey: MeasurementTechniqueType
+  numberOfBytes: 13744812
+  numberOfFiles: 2
+  numberOfSubjects: 1
   schemaKey: AssetsSummary
+  species:
+  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9544
+    name: Rhesus monkey
+    schemaKey: SpeciesType
+  variableMeasured:
+  - Units
 citation: Pei, Felix (2021) Macaque dorsomedial frontal cortex spiking activity during
   time interval reproduction task (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000130/draft
 contributor:
@@ -18,6 +35,7 @@ contributor:
   roleName:
   - dcite:ContactPerson
   schemaKey: Person
+dateCreated: '2021-08-21T19:29:11.649012+00:00'
 description: This dataset contains sorted unit spiking times from a macaque performing
   a time-interval reproduction task. In the experimental task, the monkey was presented
   with two stimuli separated by a specific interval of time. The monkey then attempted
