[backups2datalad] 2 files deleted

--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -5,26 +5,9 @@
 about: []
 access: []
 assetsSummary:
-  approach:
-  - name: electrophysiological approach
-    schemaKey: ApproachType
-  dataStandard:
-  - identifier: RRID:SCR_015242
-    name: Neurodata Without Borders (NWB)
-    schemaKey: StandardsType
-  measurementTechnique:
-  - name: spike sorting technique
-    schemaKey: MeasurementTechniqueType
-  numberOfBytes: 13744812
-  numberOfFiles: 2
-  numberOfSubjects: 1
+  numberOfBytes: 0
+  numberOfFiles: 0
   schemaKey: AssetsSummary
-  species:
-  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9544
-    name: Rhesus monkey
-    schemaKey: SpeciesType
-  variableMeasured:
-  - Units
 citation: Pei, Felix (2021) Macaque dorsomedial frontal cortex spiking activity during
   time interval reproduction task (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000130/draft
 contributor:
