--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -12,26 +12,9 @@ access:
   schemaKey: AccessRequirements
   status: dandi:OpenAccess
 assetsSummary:
-  approach:
-  - name: electrophysiological approach
-    schemaKey: ApproachType
-  dataStandard:
-  - identifier: RRID:SCR_015242
-    name: Neurodata Without Borders (NWB)
-    schemaKey: StandardsType
-  measurementTechnique:
-  - name: spike sorting technique
-    schemaKey: MeasurementTechniqueType
-  numberOfBytes: 12548396
-  numberOfFiles: 1
-  numberOfSubjects: 1
+  numberOfBytes: 0
+  numberOfFiles: 0
   schemaKey: AssetsSummary
-  species:
-  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9544
-    name: Rhesus monkey
-    schemaKey: SpeciesType
-  variableMeasured:
-  - Units
 citation: 'Sohn, Hansem; Jazayeri, Mehrdad (2021) DMFC_RSG: macaque dorsomedial frontal
   cortex spiking activity during time interval reproduction task (Version draft) [Data
   set]. DANDI archive. https://dandiarchive.org/dandiset/000130/draft'
