--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -32,7 +32,7 @@ assetsSummary:
     schemaKey: SpeciesType
   variableMeasured:
   - Units
-citation: 'Sohn, Hansem; Jazayeri, Mehrdad (2022) DMFC_RSG: macaque dorsomedial frontal
+citation: 'Sohn, Hansem; Jazayeri, Mehrdad (2024) DMFC_RSG: macaque dorsomedial frontal
   cortex spiking activity during time interval reproduction task (Version draft) [Data
   set]. DANDI archive. https://dandiarchive.org/dandiset/000130/draft'
 contributor:
@@ -66,6 +66,7 @@ contributor:
   - dcite:Author
   schemaKey: Person
 dateCreated: '2021-08-21T19:29:11.649012+00:00'
+datePublished: '2024-10-17T14:48:17.698432+00:00'
 description: 'This dataset contains sorted unit spiking times from a macaque performing
   a time-interval reproduction task. In the experimental task, the monkey was presented
   with two stimuli separated by a specific interval of time. The monkey then attempted
@@ -86,6 +87,18 @@ manifestLocation:
 name: 'DMFC_RSG: macaque dorsomedial frontal cortex spiking activity during time interval
   reproduction task'
 protocol: []
+publishedBy:
+  endDate: '2024-10-17T14:48:17.698432+00:00'
+  id: urn:uuid:41ab9455-8412-42e7-8672-7e0b8a7d3f1d
+  name: DANDI publish
+  schemaKey: PublishActivity
+  startDate: '2024-10-17T14:48:17.698432+00:00'
+  wasAssociatedWith:
+  - id: urn:uuid:0bbe9d1e-9c06-4065-9f8a-f5243cd40e51
+    identifier: RRID:SCR_017571
+    name: DANDI API
+    schemaKey: Software
+    version: 0.1.0
 relatedResource:
 - identifier: 10.1016/j.neuron.2019.06.012
   name: Bayesian computation through cortical latent dynamics
@@ -93,7 +106,7 @@ relatedResource:
   repository: Neuron
   schemaKey: Resource
   url: https://doi.org/10.1016/j.neuron.2019.06.012
-repository: https://dandiarchive.org/
+repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.0
 studyTarget: []
